--- a/static/styles.css
+++ b/static/styles.css
@@ -50,7 +50,7 @@ body {
 
 .login-box {
   position: absolute;
-  top: 50%;
+  top: 15%;
   left: 75%;  /* Move element to the right */
   width: 400px;
   padding: 40px;
@@ -61,9 +61,17 @@ body {
   border-radius: 10px;
 }
 
+.secondline {
+  margin-top: 0%;
+}
+
+.topline {
+  margin-bottom: 0%;
+}
+
 .answer-box {
   position: absolute;
-  bottom: 0%;
+  top: 65%;
   left: 75%;  /* Move element to the right */
   width: 500px;
   padding: 10px;
@@ -75,12 +83,27 @@ body {
   color: #fff;
 }
 
+.answer-box p {
+  /* position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0; */
+  font-size: 30px;
+  /* color: #fff; */
+  /* pointer-events: none;
+  transition: .5s; */
+}
+
 
 .login-box h2 {
   margin: 0 0 30px;
   padding: 0;
   color: #fff;
   text-align: center;
+}
+
+.titles{
+  color: #DAA520;
 }
 
 .login-box .user-box {
